src/ingress_controller/alertmanager-httpProxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: alertmanager-proxy
spec:
  virtualhost:
    fqdn: alertmanager.local
  routes:
  - conditions:
    - prefix: /
    services:
    - name: alertmanager
      port: 9093
